fixed bugs && rates page

--- a/src/components/reviews.pug
+++ b/src/components/reviews.pug
@@ -107,3 +107,116 @@ mixin reviews()
                                 <path d="M8.70701 7.29289C9.09753 7.68342 9.09753 8.31658 8.70701 8.70711L2.34305 15.0711C1.95252 15.4616 1.31936 15.4616 0.928834 15.0711C0.53831 14.6805 0.53831 14.0474 0.928834 13.6569L6.58569 8L0.928834 2.34315C0.53831 1.95262 0.53831 1.31946 0.928834 0.928932C1.31936 0.538408 1.95252 0.538408 2.34305 0.928932L8.70701 7.29289ZM7.3999 7H7.9999V9H7.3999V7Z" fill="white"/>
                             </svg>
             a(href="#!").reviews__a Больше отзывов о нашем Центре 
+
+
+
+mixin reviews-reverse()
+    .reviews.reverse
+        .reviews__body.container    
+            h2.reviews__title Отзывы о работе учебного центра
+            .reviews__slider 
+                .reviews__swiper.swiper 
+                    .reviews__swiper-wrapper.swiper-wrapper 
+                        .reviews__slide.swiper-slide 
+                            .reviews__item 
+                                p.reviews__p Отзыв 1
+                                .reviews__rates 
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                p.reviews__name Горностаева Дарья Александровна
+                                a(href="#!").reviews__link
+                                    <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M21.0556 40.0798L21.0916 16.1702L41.78 28.1562L21.0556 40.0798Z" fill="white"/>
+                                        <circle cx="28" cy="28" r="27" stroke="white" stroke-width="2"/>
+                                    </svg>
+                                    | Смотреть видео
+                                .reviews__img 
+                                    img(src="@img/reviews-img-1.png", alt="" draggable="false")
+                        .reviews__slide.swiper-slide 
+                            .reviews__item 
+                                p.reviews__p Отзыв 2
+                                .reviews__rates 
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                p.reviews__name Гришина Наталья Юрьевна
+                                a(href="#!").reviews__link
+                                    <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M21.0556 40.0798L21.0916 16.1702L41.78 28.1562L21.0556 40.0798Z" fill="white"/>
+                                        <circle cx="28" cy="28" r="27" stroke="white" stroke-width="2"/>
+                                    </svg>
+                                    | Смотреть видео
+                                .reviews__img 
+                                    img(src="@img/reviews-img-2.png", alt="" draggable="false")
+                        .reviews__slide.swiper-slide 
+                            .reviews__item 
+                                p.reviews__p Отзыв 3
+                                .reviews__rates 
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                p.reviews__name Федоренко Жанна Александровна
+                                a(href="#!").reviews__link
+                                    <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M21.0556 40.0798L21.0916 16.1702L41.78 28.1562L21.0556 40.0798Z" fill="white"/>
+                                        <circle cx="28" cy="28" r="27" stroke="white" stroke-width="2"/>
+                                    </svg>
+                                    | Смотреть видео
+                                .reviews__img 
+                                    img(src="@img/reviews-img-3.png", alt="" draggable="false")
+                        .reviews__slide.swiper-slide 
+                            .reviews__item 
+                                p.reviews__p Отзыв 4
+                                .reviews__rates 
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                    .reviews__rate 
+                                        img(src="@img/star.svg", alt="" draggable="false")
+                                p.reviews__name Сухарева Светлана Викторовна
+                                a(href="#!").reviews__link
+                                    <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M21.0556 40.0798L21.0916 16.1702L41.78 28.1562L21.0556 40.0798Z" fill="white"/>
+                                        <circle cx="28" cy="28" r="27" stroke="white" stroke-width="2"/>
+                                    </svg>
+                                    | Смотреть видео
+                                .reviews__img 
+                                    img(src="@img/reviews-img-4.png", alt="" draggable="false")
+                    .reviews__buttons
+                        .reviews__button.reviews__button-prev
+                            <svg width="9" height="16" viewBox="0 0 9 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0.292991 7.29289C-0.0975335 7.68342 -0.0975335 8.31658 0.292991 8.70711L6.65695 15.0711C7.04748 15.4616 7.68064 15.4616 8.07117 15.0711C8.46169 14.6805 8.46169 14.0474 8.07117 13.6569L2.41431 8L8.07117 2.34315C8.46169 1.95262 8.46169 1.31946 8.07117 0.928932C7.68064 0.538408 7.04748 0.538408 6.65695 0.928932L0.292991 7.29289ZM1.6001 7H1.0001V9H1.6001L1.6001 7Z" fill="white"/>
+                            </svg>
+                        .reviews__button.reviews__button-next
+                            <svg width="9" height="16" viewBox="0 0 9 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8.70701 7.29289C9.09753 7.68342 9.09753 8.31658 8.70701 8.70711L2.34305 15.0711C1.95252 15.4616 1.31936 15.4616 0.928834 15.0711C0.53831 14.6805 0.53831 14.0474 0.928834 13.6569L6.58569 8L0.928834 2.34315C0.53831 1.95262 0.53831 1.31946 0.928834 0.928932C1.31936 0.538408 1.95252 0.538408 2.34305 0.928932L8.70701 7.29289ZM7.3999 7H7.9999V9H7.3999V7Z" fill="white"/>
+                            </svg>
+            a(href="#!").reviews__a Больше отзывов о нашем Центре 
+
