--- a/src/rates.pug
+++ b/src/rates.pug
@@ -15,16 +15,14 @@ html(lang="en")
                 +rates-intro
                 include components/teachers
                 +teachers2 
-                include components/training 
-                +training 
                 include components/documents 
                 +documents 
-                include components/benefits 
-                +benefits
+                include components/training 
+                +training 
                 include components/samples 
                 +samples 
                 include components/reviews 
-                +reviews 
+                +reviews-reverse 
                 include components/faq 
                 +faq 
             include components/footer 
