--- a/src/scss/layout/_samples.scss
+++ b/src/scss/layout/_samples.scss
@@ -22,13 +22,14 @@
         }
     }
     &__content{
-        @include res('border-radius', 30px);
+        border-radius: 1.563vw;
         background: #FFF;
         box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);
         @include res('padding-bottom', 46px);
         display: flex;
         flex-direction: column;
         align-items: center;
+        overflow: hidden;
         @include media(575){
             box-shadow: none;
             background: none;
@@ -58,6 +59,10 @@
     }
     &__wrapper{
         width: 100%;
+        @include media(576){
+            border-radius: 1.563vw;
+            overflow: hidden;
+        }
     }
     &__left{
         min-width: 50%;
