--- a/src/rates.pug
+++ b/src/rates.pug
@@ -15,6 +15,8 @@ html(lang="en")
                 +rates-intro
                 include components/teachers
                 +teachers2 
+                include components/search
+                +search
                 include components/documents 
                 +documents 
                 include components/training 
