--- a/src/scss/layout/_teachers.scss
+++ b/src/scss/layout/_teachers.scss
@@ -100,6 +100,7 @@
         @include media(575){
             @include resa('top', -120px);
             @include resa('height', 120px);
+            @include resa('width', 86.73px);
         }
         img{
             height: 100%;
