--- a/src/components/search.pug
+++ b/src/components/search.pug
@@ -1,6 +1,6 @@
 mixin item()
     .search__item   
-        p.search__item-price Цена от 1700р <span>990р</span>
+        p.search__item-price Цена от <del>1700р</del> <span>990р</span>
         p.search__item-title НАЗВАНИЕ КУРСА:
         p.search__item-p Актуальные проблемы обучения детей с нарушением слуха в образовательных организациях общего и среднего профессионального образования
         .search__item-row 
