--- a/src/scss/layout/_training.scss
+++ b/src/scss/layout/_training.scss
@@ -4,26 +4,6 @@
     @include media(575){
         @include resa('padding-bottom', 23px);
     }
-    &::before{
-        content: '';
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        top: 0;
-        @include res('height', 480px);
-        @include res('width', 1050px);
-        background: url(../img/training-before.png) left / cover no-repeat;
-        z-index: -1;
-        @include res('border-start-start-radius', 30px);
-        @include res('border-end-start-radius', 30px);
-        @include media(575){
-            @include resa('height', 335px);
-            @include resa('width', 345px);
-            @include resa('left', 15px);
-            border-radius: 5vw 0 0 5vw;
-            right: 0;
-        }
-    }
     &__row{
         display: flex;
         align-items: flex-start;
@@ -141,10 +121,34 @@
         }
     }
     &__info{
+        position: relative;
+        @include res('padding-bottom', 48px);
         @include media(575){
             @include resa('padding-top', 25px);
             @include resa('padding-left', 18px);
-            @include resa('margin-bottom', 36px);
+            @include resa('margin-bottom', 16px);
+            @include resa('padding-bottom', 20px);
+        }
+        &::before{
+            content: '';
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            top: 0;
+            height: 100%;
+            @include res('width', 1050px);
+            @include res('right', -370px);
+            background: url(../img/training-before.png) left / cover no-repeat;
+            z-index: -1;
+            @include res('border-start-start-radius', 30px);
+            @include res('border-end-start-radius', 30px);
+            @include media(575){
+                height: 100%;
+                @include resa('width', 345px);
+                @include resa('left', 0px);
+                border-radius: 5vw 0 0 5vw;
+                right: 0;
+            }
         }
     }
     &__title{
