--- a/src/scss/layout/_benefits.scss
+++ b/src/scss/layout/_benefits.scss
@@ -115,6 +115,7 @@
         justify-content: space-between;
         position: relative;
         isolation: isolate;
+        overflow: hidden;
         &:first-of-type{
             @include media(575){
                 @include resa('margin-bottom', 10px);
@@ -126,6 +127,7 @@
             @include resa('padding-right', 15px);
             @include resa('padding-bottom', 20px);
             @include resa('padding-left', 25px);
+            @include resa('border-radius', 18px);
         }
         &.lg{
             @include res('min-width', 780px);
