--- a/src/scss/layout/_samples.scss
+++ b/src/scss/layout/_samples.scss
@@ -22,7 +22,7 @@
         }
     }
     &__content{
-        border-radius: 1.563vw;
+        @include res('border-radius', 30px);
         background: #FFF;
         box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);
         @include res('padding-bottom', 46px);
@@ -31,6 +31,7 @@
         align-items: center;
         overflow: hidden;
         @include media(575){
+            @include resa('border-radius', 12px);
             box-shadow: none;
             background: none;
             padding-bottom: 0;
@@ -60,7 +61,7 @@
     &__wrapper{
         width: 100%;
         @include media(576){
-            border-radius: 1.563vw;
+            border-radius: 3.3333333333vw;
             overflow: hidden;
         }
     }
