--- a/src/scss/layout/_documents.scss
+++ b/src/scss/layout/_documents.scss
@@ -38,6 +38,11 @@
             width: 100%;
         }
     }
+    &__body{
+        @include media(576){
+            @include resa('padding-bottom', 20px);
+        }
+    }
     &__title{
         color: #FFF;
         text-align: center;
@@ -81,7 +86,7 @@
         @include res('margin-bottom', 10px);
         @include media(575){
             max-width: 100%;
-            @include resa('margin-bottom', 3px);
+            @include resa('margin-bottom', 12px);
         }
         img{
             width: 100%;
