--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -16,9 +16,9 @@ mixin header()
             .header__mid 
                 .header__text <b>Международный педагогический портал повышения квалификации и переподготовки в соответствии с ФГОС</b> (лицензия на осуществление образовательной деятельности №9757-л, свидетельство о регистрации СМИ №ЭЛ ФС 77-65391)
                 .header__list 
-                    a(href="#!").header__link Повышение квалификации 
-                    a(href="#!").header__link Профессиональная переподготовка
-                    a(href="#!").header__link Олимпиады
+                    a(href="rates.html").header__link Повышение квалификации 
+                    a(href="retraining.html").header__link Профессиональная переподготовка
+                    a(href="olympiads.html").header__link Олимпиады
                     a(href="#!").header__link Конкурсы
             .header__right 
                 a(href="tel:+88003505464").header__tel 8 (800) 350-54-64
