--- a/src/retraining.pug
+++ b/src/retraining.pug
@@ -11,19 +11,19 @@ html(lang="en")
             include components/header 
             +header 
             main.main 
-                include components/intro 
-                +retraining-intro 
-                include components/teachers 
-                +teachers2 
-                include components/search 
-                +search 
-                include components/documents 
-                +documents 
-                include components/training 
-                +training 
-                include components/samples 
-                +samples 
-                include components/calc 
+                include components/intro
+                +retrainingIntro
+                include components/teachers
+                +ratesTeachers
+                include components/search
+                +search
+                include components/documents
+                +documents
+                include components/training
+                +training
+                include components/samples
+                +samples
+                include components/calc
                 +calc 
                 include components/reviews 
                 +reviews-reverse 
