--- a/src/scss/layout/_intro.scss
+++ b/src/scss/layout/_intro.scss
@@ -255,7 +255,7 @@
         @include res('border-radius', 10px);
         border: solid #325CFE;
         @include res('border-width', 1px);
-        svg{
+        svg,img{
             @include res('width', 25px);
             @include res('height', 25px);
         }
@@ -288,6 +288,106 @@
             @include media(576){
                 @include resa('font-size', 16px);
                 @include resa('line-height', 22px);
+            }
+        }
+    }
+    &__wrappers{
+        display: flex;
+        align-items: flex-start;
+        @include res('margin-top', 40px);   
+        @include media(575){
+            margin-top: 0;
+            width: 100%;
+        }
+    }
+    &__wrapper{
+        @include res('width', 260px);
+        @include media(575){
+            width: calc(50% - 2.778vw);
+        }
+        &:not(:last-of-type){
+            @include res('margin-right', 16px);
+            @include res('width', 250px);
+            @include media(575){
+                width: calc(50% - 2.778vw);
+                @include resa('margin-right', 16px);
+            }
+            .intro__li{
+                &:nth-of-type(odd){
+                    @include res('width',80px);
+                    @include media(575){
+                        width: 100%;
+                    }
+                }
+            }
+        }
+    }
+    &__subtitle{
+        color: #325CFE;
+        @include res('font-size', 18px);
+        @include res('line-height', 24px);
+        font-style: normal;
+        font-weight: 700;
+        @include res('margin-bottom', 2px);
+        @include media(575){
+            @include resa('font-size', 18px);
+            @include resa('line-height', 24px);
+            @include resa('margin-bottom', 2px);
+        }
+    }
+    &__content{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        @include res('padding-left', 20px);
+        @include res('column-gap', 32px);
+        @include media(575){
+            @include resa('padding-left', 20px);
+            column-gap: 0;
+            flex-direction: column;
+        }
+    }
+    &__li{
+        list-style: disc;
+        color: rgba(255, 255, 255, 0.80);
+        @include res('font-size', 12px);
+        @include res('line-height', 26px);
+        font-style: normal;
+        font-weight: 300;
+        @include media(575){
+            @include resa('font-size', 12px);
+            @include resa('line-height', 26px);
+        }
+        &:nth-of-type(odd){
+            @include res('width', 100px);
+            @include media(575){
+                width: 100%;
+            }
+        }
+    }
+    &_olympiads{
+        .intro{
+            &__bg{
+                @include media(576){
+                    display: block;
+                    width: 100%;
+                    border-radius: 0;
+                }
+            }
+            &__body{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+            }
+            &__img{
+                @include res('width', 500px);
+                @include media(575){
+                    width: 100%;
+                    @include resa('margin-top', 30px);
+                }
+                img{
+                    width: 100%;
+                }
             }
         }
     }
