--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,6 +36,8 @@
     'layout/faq',
     'layout/calc',
     'layout/search',
+    'layout/category',
+    'layout/people',
     'layout/forms';
 
 // components
