--- a/src/olympiads.pug
+++ b/src/olympiads.pug
@@ -19,6 +19,16 @@ html(lang="en")
                 +category
                 include components/people
                 +people
+                include components/tutorial
+                +tutorial
+                include components/training
+                +olympiads-training
+                include components/diplomas
+                +diplomas
+                include components/reviews 
+                +reviews 
+                include components/faq 
+                +faq 
             include components/footer 
             +footer
         script(src="js/app.min.js") 
