--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,6 +38,8 @@
     'layout/search',
     'layout/category',
     'layout/people',
+    'layout/tutorial',
+    'layout/diplomas',
     'layout/forms';
 
 // components
