--- a/src/olympiads.pug
+++ b/src/olympiads.pug
@@ -25,6 +25,10 @@ html(lang="en")
                 +olympiads-training
                 include components/diplomas
                 +diplomas
+                include components/samples 
+                +olympiads-samples 
+                include components/calc 
+                +olympiads-calc 
                 include components/reviews 
                 +reviews 
                 include components/faq 
