--- a/src/components/samples.pug
+++ b/src/components/samples.pug
@@ -29,3 +29,33 @@ mixin samples()
                         .samples__right 
                             p.samples__desc После прохождение обучения Вы получите документы в электронном виде, а через 2 дня мы бесплатно отправим оригиналы почтой.
                 button(type="button").samples__btn Подать заявку на курс
+
+mixin olympiads-samples()
+    .samples.samples__olympiads
+        .samples__body.container 
+            h2.samples__title 3 #[span простых шага] для участия #[br] в олимпиаде и #[span получения диплома :]
+            .samples__content 
+                .samples__wrapper
+                    .samples__row 
+                        .samples__left 
+                            p.samples__p 1 шаг
+                            p.samples__subtitle Выбираете #[span тему]
+                        .samples__right 
+                            p.samples__txt Займет 5 мин
+                            p.samples__desc Отвечаете на вопросы #[br] по выбранной вами теме
+                    .samples__row 
+                        .samples__left 
+                            p.samples__p 2 шаг
+                            p.samples__subtitle Заходите в #[span личный кабинет]
+                        .samples__right
+                            p.samples__txt Займет 1 мин 
+                            p.samples__desc Вам не нужно регистрироваться #[br] в кабинете - просто укажите e-mail
+                    .samples__row
+                        .samples__left 
+                            p.samples__p 3 шаг
+                            p.samples__subtitle Получаете #[span диплом]
+                        .samples__right.gray  
+                            p.samples__txt Займет 1 мин
+                            p.samples__desc Выбираете внешний вид диплома,  #[br] оформляете заказ
+                button(type="button").samples__btn Выбрать тему олимпиады
+
