--- a/src/scss/layout/_diplomas.scss
+++ b/src/scss/layout/_diplomas.scss
@@ -53,6 +53,7 @@
         @include res('height', 552px);
         @include res('margin-top', -84px);
         position: absolute;
+        line-height: 0;
         @include media(575){
             @include resa('width', 110px);
             @include resa('height', 170px);
@@ -62,6 +63,7 @@
         img{
             width: 100%;
             height: 100%;
+            line-height: 0;
         }
     }
     &__img{
